name:                blocksqld
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/blocksqld#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable blocksqld
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , attoparsec
                     , base16-bytestring
                     , base64-bytestring
                     , bytestring
                     , configurator
                     , cryptohash
                     , exceptions
                     , either
                     , errors
                     , http-client
                     , http-types
                     , monad-logger
                     , mtl
                     , network
                     , persistent
                     , persistent-postgresql
                     , persistent-sqlite
                     , persistent-template
                     , pretty-simple
                     , random
                     , resource-pool
                     , scientific
                     , transformers
                     , text
                     , time
                     , unix-time
                     , word8

  other-modules:     Blocksqld.Commands
                     Blocksqld.Database
                     Blocksqld.Types
                     Blocksqld.Genesis

  default-language:    Haskell2010

test-suite blocksqld-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blocksqld
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/blocksqld
